--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "fmt.eslint": "eslint . --cache --fix",
     "fmt.prettier": "prettier . --cache --write"
   },
+  "dependencies": {
+    "ts-pattern": "5.0.3"
+  },
   "devDependencies": {
     "@eslint/js": "8.44.0",
     "@tsconfig/esm": "1.0.4",
@@ -32,6 +35,7 @@
     "typescript": "5.1.6",
     "vite": "4.4.4",
     "vite-tsconfig-paths": "4.2.0",
-    "vitest": "0.33.0"
+    "vitest": "0.33.0",
+    "vitest-mock-extended": "1.1.4"
   }
 }
